[COLAB-1563] Add contest manager tabs
Other tasks: COLAB-1502